
SET(
  ${PROJECT_NAME}_INCLUDE_DIRS ${${PROJECT_NAME}_INCLUDE_DIRS}
  ${CMAKE_CURRENT_SOURCE_DIR}
  PARENT_SCOPE
  )

SET(
  HEADERS ${HEADERS}
  PrintableObject.hpp
  Message.hpp
  ContractException.hpp
  Comm.hpp
  )

SET(
  SRC ${SRC}
  PrintableObject.cpp
  Message.cpp 
  )
  
IF(CMAKE_VERBOSE_CONFIGURE)
  MESSAGE("HEADERS = ${HEADERS}")
ENDIF()

ADD_LIBRARY(${PROJECT_NAME} ${SRC})

SET_TARGET_PROPERTIES( ${PROJECT_NAME}
  PROPERTIES 
  INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/lib"
  INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib"
  )

TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl ${${PROJECT_NAME}_LIBS})

INSTALL(
  TARGETS ${PROJECT_NAME}
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  )

INSTALL(
  FILES ${HEADERS}
  DESTINATION include
  PERMISSIONS OWNER_READ GROUP_READ WORLD_READ
  )
  